# typelist

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  palgen.toml
include/slo/: typelist.h
test/: CMakeLists.txt
